--- a/frontend.html
+++ b/frontend.html
@@ -38,8 +38,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qE1aVfwu&k=Job&j=odHT9fwG&__jvst=Employee&__jvsd=sntZTgwt&__jvsc=Twitter&bid=ncwqpMwO'>WW International (formerly Weight Watchers) Careers - Front End Engineer</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698469559-engineering-manager-front-end-core-xp'>Omio Engineering Manager - Front End - Core XP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698560911-front-end-developer-aem-'>Veeam Front-End Developer (AEM) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qE1aVfwu&k=Job&j=odHT9fwG&__jvst=Employee&__jvsd=sntZTgwt&__jvsc=Twitter&bid=ncwqpMwO'>WW International (formerly Weight Watchers) Careers - Front End Engineer</a></h5> 
+<p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698474668-frontend-engineer-habitaclia'>Adevinta Frontend Engineer Habitaclia | SmartRecruiters</a></h5> 
@@ -216,7 +224,7 @@
 <p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/callibrity/jobs/4499922002'>Job Application for Software Developer (Front-End / UI) at Callibrity</a></h5> 
+<h5><a href='https://boards.greenhouse.io/callibrity/jobs/4499922002'>Job Application for Software Developer (Front-End / UI) at Callibrity</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -292,7 +300,7 @@
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698471750-senior-front-end-developer'>McFadyen Digital Senior Front-end Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698471750-senior-front-end-developer'>McFadyen Digital Senior Front-end Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -300,7 +308,7 @@
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dynamit/d150104d-ebd5-40f8-8779-21c0e13c2e3d'>Dynamit - Sr Front End Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/dynamit/d150104d-ebd5-40f8-8779-21c0e13c2e3d'>Dynamit - Sr Front End Developer</a></h5> 
 <p><span class="badge badge-light">Columbus, Ohio</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -370,7 +378,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698456472-web-developer-frontend-ubisoft-club-f-m-d-'>Ubisoft Web Developer Frontend [Ubisoft Club] (f/m/d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698456472-web-developer-frontend-ubisoft-club-f-m-d-'>Ubisoft Web Developer Frontend [Ubisoft Club] (f/m/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -432,7 +440,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://walletservices.recruitee.com/o/front-end-developer-javascriptreact'>
+<h5><a href='https://walletservices.recruitee.com/o/front-end-developer-javascriptreact'>
       Front End Developer (Javascript/React) - Wallet.Services
     </a></h5> 
 <p><span class="badge badge-light">Edinburgh, United Kingdom</span></p>
@@ -455,14 +463,6 @@
 <h5><a href='https://jobs.kanepartners.net/frontend-software-engineer/job/11763642'>Frontend Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/ruelala/jobs/1931536'>Job Application for Principal Front-End Engineer at Rue Gilt Groupe</a></h5> 
-<p><span class="badge badge-light">Boston, MAUnited States</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/ruelala/jobs/1931537'>Job Application for Principal Front-End Engineer at Rue Gilt Groupe</a></h5> 
-<p><span class="badge badge-light">Montreal</span></p>
-<p>Posted on: 2019-10-29</p>
 <hr/>
 
 
